@@ -1,6 +1,7 @@
 xterm (315-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Refresh Debian patches.
 
  -- Sven Joachim <svenjoac@gmx.de>  Wed, 04 Mar 2015 17:09:50 +0100
 
